# last-chance-at-life

./: .gitignore  aggregate_patterns.py  aggregated_raw.json  blog_posts_analysis.csv  convert_blog_to_csv.py  create_narrative.py  kimi_analysis_results.json  main.py  narrative_analysis.md  pattern_analysis_report.md  puer_aeternus_analysis.md  puer_aeternus_analysis.py  puer_patterns_raw.json  pyproject.toml  qwen_analysis_results_0-300.json  qwen_analysis_results_301-600.json  still haven_t figured this shit out yet.json  temporal_narrative.json
.claude/: settings.local.json
analyses/: mistral_analysis_results.json
archive/old_analysis/: graduation_analysis.py  graduation_impact_results.csv  qualitative_analysis.py  temporal_visualization.py
archive/old_docs/: llm-psychological-analysis-best-practices.md  llm_analysis_prompts.md  llm_cost_comparison.md  psychological_analysis_plan_v1.md  psychological_analysis_plan_v2.md  psychological_analysis_plan_v3_llm_semantic.md
docs/: big-pic.md  llm_psychological_assessment_frameworks.md  personal-archive.md  todo.md
results/: shutdown_patterns_analysis.md  work_shutdown_analysis.md
scripts/: kimi_analysis.py  mistral_analysis.py  qwen_analysis.py
